# ecco

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  NEWS.md  README.md  compose.yaml  install.sh  pyproject.toml  setup.py
doc/: palettes.ipynb  petri-nets-semantics.ipynb  pond.rr  rr-modelling.ipynb  state-space-analysis.ipynb  static-analysis.ipynb  termites-inlined.rr  termites.rr  unfolding.ipynb
docker/: .Dockerfile.swp  Dockerfile  Makefile
ecco/: __init__.py  __main__.py  _ui.pyx  bqcm.py  cygraphs.py  graphs.py  pn.py  scm.py  tikz.py  unf.py
ecco.egg-info/: PKG-INFO  SOURCES.txt
ecco/dr/: __init__.py  dr_peg.py
ecco/lrr/: __init__.py  lts.cpp  lts.pyx  rrparse.py  statexpr.py
ecco/model/: __init__.py  match.py  mrr.py  print.py  record.py  rr.py  z3model.py
ecco/model/mrr/: __init__.py  _mkparsers.py  mrr.lark  mrrmod.lark  mrrmodparse.py  mrrparse.py  mrrpat.lark  mrrpatparse.py  parser.py
ecco/mrr/: __init__.py  cg.py  lts.cpp  lts.pyx  ltsprop.py  mrr.lark  mrrparse.py  parser.py  pattparse.py  tables.py
ecco/rr/: __init__.py  _states.pyx  lts.pyx  ltsprop.py  rr.ebnf  rrparse.py  st.py
include/: ddd.pxd  dddwrap.h  its.pxd  itswrap.h
include/its/gal/parser/: exprParserLexer.h  exprParserParser.h
logo/: Makefile  ecco.xpm  logo.tex
tests/: .gitignore  nests.mrr  sort.mrr  termites.rr  test_lts.py
